--- a/app/public/index.html
+++ b/app/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/bundled-up.svg" />
-    <meta name="viewport" content="width=480px, initial-scale=1" />
+    <meta name="viewport" content="max-width=480px, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
