--- a/app/public/index.html
+++ b/app/public/index.html
@@ -13,7 +13,7 @@
           body {
               display: flex;
               justify-content: center;
-              align-items: center;
+              /*align-items: center;*/
               margin: auto;
           }
       </style>
