--- a/app/public/index.html
+++ b/app/public/index.html
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/bundled-up.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="theme-color" content="#000000" />
+<head>
+    <meta charset="utf-8"/>
+    <link href="%PUBLIC_URL%/bundled-up.svg" rel="icon"/>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <meta content="#000000" name="theme-color"/>
     <meta
-      name="description"
-      content="How to bundle up your kid based on today's weather"
+            content="Bundle Up is an easy-to-use weather app with clothes recommendations for kids. It is made to be a tool especially for parents who are short of time in the mornings. By just opening the app you will se today's weather along with recommended number of layers and/or special clothes for rainy days etc."
+            name="description"
     />
-      <style>
-          body {
-              display: flex;
-              justify-content: center;
-              /*align-items: center;*/
-              margin: auto;
-          }
-      </style>
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+            /*align-items: center;*/
+            margin: auto;
+        }
+    </style>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-<!--     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
+    <!--     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -32,19 +32,19 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>VærKlar</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+</head>
+<body>
+<noscript>You need to enable JavaScript to run this app.</noscript>
+<div id="root"></div>
+<!--
+  This HTML file is a template.
+  If you open it directly in the browser, you will see an empty page.
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+  You can add webfonts, meta tags, or analytics to this file.
+  The build step will place the bundled scripts into the <body> tag.
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
+  To begin the development, run `npm start` or `yarn start`.
+  To create a production bundle, use `npm run build` or `yarn build`.
+-->
+</body>
 </html>
